--- a/Rmq.Publisher/appsettings.Development.json
+++ b/Rmq.Publisher/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMqConnection": {
+    "HostName": "localhost",
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672
   }
 }
