--- a/Rmq.Publisher/appsettings.json
+++ b/Rmq.Publisher/appsettings.json
@@ -6,5 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+    "RabbitMq": {
+      "Client": {
+        "Uri": "ampq://guest:guest@localhost:5672/"
+      }
+    },
+    "RabbitMqConnection": {
+      "HostName": "localhost",
+      "Username": "guest",
+      "Password": "guest",
+      "VirtualHost": "/",
+      "Port": 5672
+    },
   "AllowedHosts": "*"
 }
